test/associative/bharshbarg/arrays/badAssocZip.good
badAssocZip.chpl:4: error: halt reached - zippered associative array does not match the iterated domain
