test/associative/bharshbarg/arrays/badAssocZip.chpl
var A = [1=>1, 2=>2];
var B = [1=>1, 2=>2, 3=>3];

forall x in zip(A, B) do writeln(x);
